# id_mlip

./: .buildinfo  .pre-commit-config.yaml  CHANGELOG  Dockerfile  Dockerfile.packaging  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/api_reference/: index.doctree
.doctrees/api_reference/data/: atomic_number_table.doctree  chemical_system.doctree  data_prefetching.doctree  data_split.doctree  dataset_configs.doctree  dataset_info.doctree  graph_dataset.doctree  graph_dataset_builder.doctree  graph_definition.doctree  helper_functions.doctree  index.doctree
.doctrees/api_reference/models/: force_field.doctree  index.doctree  io.doctree  loss.doctree  mace.doctree  mlip_network.doctree  nequip.doctree  options.doctree  prediction.doctree  predictor.doctree  visnet.doctree
.doctrees/api_reference/simulation/: ase_calculator.doctree  ase_engine.doctree  ase_sim_config.doctree  batched_inference.doctree  enums.doctree  graph_from_atoms.doctree  index.doctree  jaxmd_engine.doctree  jaxmd_sim_config.doctree  (+4 more)
.doctrees/installation/: index.doctree
.doctrees/user_guide/: data_processing.doctree  finetuning.doctree  index.doctree  models.doctree  simulations.doctree  training.doctree
.github/workflows/: deploy_docs.yaml  publish.yaml  publish_package.yml  tests_and_linters.yaml
_sources/api_reference/: index.rst.txt
_sources/installation/: index.rst.txt
_sources/user_guide/: data_processing.rst.txt  finetuning.rst.txt  models.rst.txt  simulations.rst.txt
api_reference/: index.html
api_reference/data/: atomic_number_table.html  chemical_system.html  data_prefetching.html  data_split.html  dataset_configs.html  dataset_info.html  graph_dataset.html  graph_dataset_builder.html  graph_definition.html  helper_functions.html  index.html
api_reference/models/: force_field.html  index.html  io.html  loss.html  mace.html  mlip_network.html  nequip.html  options.html  prediction.html  predictor.html  visnet.html
api_reference/simulation/: ase_calculator.html  ase_engine.html  ase_sim_config.html  batched_inference.html  enums.html  graph_from_atoms.html  index.html  jaxmd_engine.html  jaxmd_sim_config.html  sim_config.html  simulation_engine.html  simulation_state.html  temperature_scheduling.html
api_reference/training/: ema.html  evaluation.html  finetuning.html  index.html  optimizer.html  training_io_handling.html  training_loop.html  training_loop_config.html  training_state.html  training_step.html
doc/: conf.py  first_dummy_feature.md  index.rst  second_dummy_feature.md
docs/source/: conf.py  index.rst
id_mlip/: __init__.py  dummy_script.py  pyproject.toml  setup.py
installation/: index.html
mlip/: __init__.py
mlip/data/: __init__.py  chemical_system.py  configs.py  dataset_info.py  graph_dataset_builder.py
mlip/inference/: __init__.py  batched_inference.py
mlip/models/: __init__.py  atomic_energies.py  blocks.py  force_field.py  loss.py  loss_helpers.py  mlip_network.py  model_io.py  options.py  params_loading.py  params_transfer.py  predictor.py  radial_embedding.py
mlip/simulation/: __init__.py  enums.py  exceptions.py  simulation_engine.py  state.py  temperature_scheduling.py  utils.py
mlip/training/: __init__.py  ema.py  evaluation.py  finetuning_utils.py  metrics_reweighting.py  optimizer.py  optimizer_config.py  training_io_handler.py  training_loggers.py  training_loop.py  training_loop_config.py  training_state.py  training_step.py
mlip/typing/: __init__.py  fields.py  graph_definition.py  prediction.py  signatures.py
mlip/utils/: __init__.py  dict_flatten.py  multihost.py  no_pbc_cell.py  safe_norm.py
mlip_jax/: __init__.py  dummy_script.py
open-sourcing/: setup.py
tests/: conftest.py
tests/data/: mace_test_params.pkl  mace_test_params_3_heads.pkl  nequip_test_params.pkl  small_aspirin_test.xyz  small_aspirin_test_unseen_atoms.xyz  small_materials_test.extxyz  spice2-1000_429_md_0-1.hdf5  visnet_test_params.pkl
tests/data_processing/: test_combined_reader.py  test_data_processing.py  test_hdf5_reader.py  test_reader_config.py
tests/models/: test_model_io.py  test_params_transfer.py
tests/models_core/: test_mace.py  test_mace_block.py  test_symmetric_contraction.py
tests/models_inference/: test_batched_inference.py  test_mace_inference.py  test_nequip_inference.py  test_visnet_inference.py
tests/simulation/: test_ase_energy_minimization.py  test_ase_simulation.py  test_jax_md_energy_minimization.py  test_jax_md_simulation.py
tests/training/: test_training.py
tests/utils/: test_get_edge_vectors.py  test_no_pbc_cell.py
tutorials/: model_addition_tutorial.ipynb  model_training_tutorial.ipynb  simulation_tutorial.ipynb
user_guide/: data_processing.html  finetuning.html  index.html  models.html  simulations.html  training.html
(+117 files in other folders)
