[tool.poetry]
name = "id_mlip"
version = "0.1.0"
description = ""
license = "LICENSE"
authors = [
    "Jules Tilly <j.tilly@instadeep.com>",
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.26.0"
ase = "^3.22.1"
orbax-checkpoint = "0.5.2"
omegaconf = "^2.3.0"
dm-haiku = "^0.0.12"
dm-tree = "^0.1.8"
e3nn-jax = "^0.20.7"
flax = "^0.9.0"
jraph = "*"
orbax = "^0.1.9"
roundmantissa = "^0.2.1"
matscipy = "1.0.0"
tdqm = "^0.0.1"
jax-md = "^0.2.8"
pydantic = "^2.10.2"
tqdm-loggable = "^0.2"
h5py = "^3.12.1"

[tool.poetry.group.jax.dependencies]
jax = {extras = ["cuda12_local"], version = "0.4.33"}
jaxlib = {extras = ["cuda12_local"], version = "0.4.33"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "24.2.0"
pre-commit = "^4.0.1"
sphinx = "^8.1.3"
furo = "^2024.8.6"

[tool.poetry.group.experiment.dependencies]
jupyter = "^1.1.1"
hydra-core = "^1.3.2"
huggingface-hub = "^0.25.2"
insta-fs = {version = "^0.2.0", source = "instafs"}
cloudpathlib = "^0.19.0"
neptune = "^1.12.0"

[[tool.poetry.source]]
name = "instafs"
url = "https://gitlab.com/api/v4/projects/47354289/packages/pypi/simple"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.coverage.report]
include_namespace_packages = true
