[project]
name = "mlip"
version = "0.1.4"
description = "Machine Learning Interatomic Potentials in JAX"
license = "Apache-2.0"
authors = [
    {name="InstaDeep", email="c.brunken@instadeep.com"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
]

requires-python = ">=3.10,<3.12"

dependencies = [
    "numpy ~= 1.26.0",
    "jax ~= 0.4.35",
    "jaxlib ~= 0.4.34",
    "ase ~= 3.22.1",
    "orbax-checkpoint == 0.5.2",
    "omegaconf ~= 2.3.0",
    "dm-haiku ~= 0.0.12",
    "dm-tree ~= 0.1.8",
    "e3nn-jax ~= 0.20.7",
    "flax ~= 0.9.0",
    "jraph == 0.0.6.*",
    "orbax ~= 0.1.9",
    "roundmantissa ~= 0.2.1",
    "matscipy == 1.0.0",
    "pydantic ~= 2.10.2",
    "h5py ~= 3.12.1",
    "tqdm ~= 4.0",
    "tqdm-loggable ~= 0.2"
]

[dependency-groups]
dev = [
    "pytest ~= 7.4.0",
    "pytest-cov ~= 4.1.0",
    "black ~= 24.2.0",
    "pre-commit ~= 4.0.1",
    "sphinx ~= 8.1.3",
    "furo ~= 2024.8.6"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"

[tool.coverage.report]
include_namespace_packages = true

